--- a/assets/css/syle.css
+++ b/assets/css/syle.css
@@ -45,6 +45,7 @@ body {
 
 .game-word {
     display: flex;
+    margin-left: 0;
     gap: 15px
 }
 
@@ -58,11 +59,11 @@ body {
 
 
 .game-word .letter {
-    width: 30px;
-    border-bottom: 5px solid;
+    width: 50px;
+    height: 50px;
     list-style: none;
     font-weight: 500;
-    font-size: 2.5rem;
+    font-size: 3rem;
     text-transform: uppercase;
     margin-bottom: 70px;
     align-items: center;
@@ -169,13 +170,25 @@ button[type="submit"]:hover {
     background-color: #6ded8a;
 }
 
+@media only screen and (min-width: 577px) and (max-width: 768px) {
+    .game-word .letter {
+        width: 30px;
+        height: 30px;
+        font-size: 2rem;  
+    }
+    
+  }
 @media screen and (max-width: 576px) {
     .inner-box {
         display: flex;
         flex-direction: column;
         align-items: center;
     }
-    .game-box,
+    .game-word .letter {
+        width: 25px;
+        height: 25px;
+        font-size: 1rem;  
+    }
     .hint {
         margin-top: 20px; 
         text-align: center;
