--- a/assets/css/syle.css
+++ b/assets/css/syle.css
@@ -143,6 +143,7 @@ button[type="submit"]:hover {
     max-width: 500px;
     width: 100%;
     text-align: center;
+    justify-content: center;
     border-radius: 10px;
     padding: 50px;
 }
