adjust media query for screens 768px

--- a/assets/css/syle.css
+++ b/assets/css/syle.css
@@ -242,6 +242,24 @@ credit to CodingNepal, styling based from "Build A Hangman Game in HTML CSS and 
     }
 }
 
+@media only screen and (max-width: 768px) {
+    .game-word .letter {
+        width: 40px;
+        height: 50px; /* Maintain height */
+        font-size: 2rem; /* Adjust font size */
+    }
+
+    .game-box {
+        flex-direction: column; /* Stack elements vertically */
+        align-items: center; /* Center align items */
+    }
+
+    .reset {
+       
+        margin-top: 20px; /* Add margin to separate from other elements */
+    }
+}
+
 @media screen and (max-width: 576px) {
     .inner-box {
         display: flex;
