--- a/assets/css/syle.css
+++ b/assets/css/syle.css
@@ -245,18 +245,18 @@ credit to CodingNepal, styling based from "Build A Hangman Game in HTML CSS and 
 @media only screen and (max-width: 768px) {
     .game-word .letter {
         width: 40px;
-        height: 50px; /* Maintain height */
-        font-size: 2rem; /* Adjust font size */
+        height: 50px; 
+        font-size: 2rem; 
     }
 
     .game-box {
-        flex-direction: column; /* Stack elements vertically */
-        align-items: center; /* Center align items */
+        flex-direction: column; 
+        align-items: center; 
     }
 
     .reset {
        
-        margin-top: 20px; /* Add margin to separate from other elements */
+        margin-top: 20px; 
     }
 }
 
